kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: camb-kvstore
  labels:
    name: camb-kvstore
    environment: dev
    project: kvstore
